--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction To Javascript</title>
+    
+    <script src="/script1.js"></script>
     <script src="/script.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
     
